third_party/move/move-prover/tests/sources/functional/spec_fun_tuple_errors.exp
Move prover returns: exiting with condition generation errors
error: [boogie translator] unit type (empty tuple) not supported
  ┌─ tests/sources/functional/spec_fun_tuple_errors.move:6:28
  │
6 │     spec fun empty(): () { () }
  │                            ^^

error: [boogie translator] tuple has 9 elements, maximum supported is 8
   ┌─ tests/sources/functional/spec_fun_tuple_errors.move:12:10
   │
12 │       spec fun too_large(a: u64, b: u64, c: u64, d: u64, e: u64,
   │ ╭──────────^
13 │ │                        f: u64, g: u64, h: u64, i: u64):
14 │ │         (u64, u64, u64, u64, u64, u64, u64, u64, u64) {
15 │ │         (a, b, c, d, e, f, g, h, i)
16 │ │     }
   │ ╰─────^

error: [boogie translator] tuple has 10 elements, maximum supported is 8
   ┌─ tests/sources/functional/spec_fun_tuple_errors.move:19:10
   │
19 │       spec fun way_too_large(a: u64, b: u64, c: u64, d: u64, e: u64,
   │ ╭──────────^
20 │ │                            f: u64, g: u64, h: u64, i: u64, j: u64):
21 │ │         (u64, u64, u64, u64, u64, u64, u64, u64, u64, u64) {
22 │ │         (a, b, c, d, e, f, g, h, i, j)
23 │ │     }
   │ ╰─────^

error: [boogie translator] unit type (empty tuple) not supported
   ┌─ tests/sources/functional/spec_fun_tuple_errors.move:29:28
   │
29 │         ensures empty() == ();
   │                            ^^
